--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.2.0",
     "recharts": "^2.1.10",
     "sass": "^1.52.1",
     "wagmi": "^0.4.10"
