--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "validate": "npm run prettier & npm run lint:eslint & npm run check-types & npm run build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "classnames": "^2.3.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
@@ -22,6 +23,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
+    "react-popper": "^2.3.0",
     "recharts": "^2.1.10",
     "sass": "^1.52.1",
     "wagmi": "^0.4.10"
@@ -39,7 +41,7 @@
     "lint-staged": ">=12.4.2",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "^3.1.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.7.2"
   },
