--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "ethers": "^5.6.8",
