addded export command

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "export": "next export",
     "lint:eslint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,scss}'",
     "prepare": "husky install",
     "check-types": "tsc",
-    "validate": "npm run prettier & npm run lint:eslint & npm run check-types & npm run build"
+    "validate": "yarn run prettier & yarn run lint:eslint & yarn run check-types & yarn run build"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
@@ -48,7 +49,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "npm run lint:eslint"
+      "yarn run lint:eslint"
     ],
     "*.{js,jsx,ts,tsx,scss}": [
       "prettier --write"
