--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-popper": "^2.3.0",
     "react-virtualized-auto-sizer": "^1.0.6",
     "recharts": "^2.1.10",
