--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "classnames": "^2.3.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "ethers": "^5.6.8",
+    "highcharts": "^10.2.0",
+    "highcharts-react-official": "^3.1.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
