--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "ethers": "^5.6.8",
     "highcharts": "^10.2.0",
