--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@types/lodash": "^4.14.188",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
@@ -24,6 +25,7 @@
     "ethers": "^5.6.8",
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
+    "lodash": "^4.17.21",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
